fix(style): remove useless grid prefix on gap properties

--- a/packages/ods-react/src/style/_tag.scss
+++ b/packages/ods-react/src/style/_tag.scss
@@ -7,7 +7,7 @@ $ods-tag-height-lg: 28px;
   box-sizing: border-box;
   display: inline-flex;
   flex-flow: row;
-  grid-gap: 0.25rem;
+  gap: 0.25rem;
   align-items: center;
   border-width: 2px;
   border-style: solid;
